# SegmentationReview

./: .gitignore  AGENT_GUIDE.md  CLAUDE.md  CMakeLists.txt  README.md
BIRADSConcepts/: BIRADSConcepts.py
SegAltReview/: SegAltReview.py
SegmentationReview/: SegmentationReview.py
SegmentationReview-chatgpt-tutorial/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  commitlint.config.js  pyproject.toml  requirements-dev.txt
SegmentationReview-chatgpt-tutorial/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
SegmentationReview-chatgpt-tutorial/.github/PULL_REQUEST_TEMPLATE/: feature.md
SegmentationReview-chatgpt-tutorial/.github/workflows/: ci.yml
SegmentationReview-chatgpt-tutorial/docs/tutorial/: 00_overview.md  01_core_concepts.md  02_branches.md  03_remote_workflow.md  04_commit_conventions.md  05_pull_requests.md  06_rebase.md  07_ci_github_actions.md  08_exercises.md
SegmentationReview-chatgpt-tutorial/docs/tutorial/examples/: feature_branch_lifecycle.md  llm_git_prompts.md  rebase_conflict_walkthrough.md
SegmentationReview-chatgpt-tutorial/scripts/: check.sh
SegmentationReview-chatgpt-tutorial/src/segmentation_review/: __init__.py  exporter.py  loader.py
SegmentationReview-chatgpt-tutorial/src/tests/: conftest.py  test_exporter.py  test_loader.py
SegmentationReview-claude-tutorial/: CONTRIBUTING.md  README.md
Test/: Test.py
docs/: 00_overview.md  01_core_concepts.md  02_branches.md  03_remote_workflow.md  04_commit_conventions.md  05_pull_requests.md  06_rebase.md  07_ci_github_actions.md  08_exercises.md  README.md
(+16 files in other folders)
